Fix wrapping in code examples

--- a/css/docs.css
+++ b/css/docs.css
@@ -501,6 +501,9 @@ pre.html {
   color: #ff8ce6;
 }
 
+pre {
+  word-wrap: break-word;
+}
 
 code,
 pre {
@@ -515,11 +518,6 @@ code {
 
 pre code {
   padding: 0
-}
-
-code,
-pre {
-  /* margin-top: 10px; */
 }
 
 code, code.prettyprint, pre.prettyprint {
